fix: h4 spacing

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -36,7 +36,7 @@
   }
 
   h4 {
-    @apply text-base font-bold text-black dark:text-white md:text-xl;
+    @apply text-base font-bold text-black dark:text-white md:text-xl mb-2;
   }
 
   p {
